# streamsources

./: .gitignore  Cargo.toml  gen-client.bat  readme.md  start.bat  v2.json
app/: Cargo.toml  Trunk.toml  index.html
app/src/: main.rs  state.rs
app/src/components/: header.rs  index.rs  mod.rs
app/src/components/containers/: header.rs
app/src/components/pages/: base.rs  hypetrain_settings.rs  index.rs  mod.rs  page404.rs  prediction_settings.rs
app/src/components/pages/source_settings/: mod.rs  prediction_settings.rs
app/src/components/widgets/: carousel.rs  login_button.rs  login_state.rs  mod.rs  modal.rs  source_link.rs  test_button.rs
app/src/components/widgets/source_settings/: boolean_chooser.rs  checkbox.rs  login_source_link.rs  mod.rs  number_input.rs  source_color_chooser.rs  static_source_link.rs
app/src/util/: bootstrap.rs  login_gate.rs  mod.rs
app/style/: style.scss
hypetrain-normal/: Cargo.toml  Trunk.toml
hypetrain-normal/src/: main.rs
hypetrain-normal/style/: style.scss
predictions-list/: Cargo.toml  Trunk.toml  index.html
predictions-list/src/: main.rs
predictions-pie/: Cargo.toml  Trunk.toml
server/: Cargo.toml
server/migrations/2022-11-03-171814_create_twitch_users/: down.sql  up.sql
server/migrations/2022-11-05-180116_create_auth_state/: down.sql  up.sql
server/migrations/2022-11-20-193614_create_quick_login_token/: down.sql  up.sql
server/migrations/2023-01-20-175107_remove_login_token_creation/: down.sql  up.sql
server/migrations/2023-01-22-082629_create_subscriptions/: down.sql  up.sql
server/src/: errors.rs  main.rs  websockets.rs
server/src/db/: auth_state.rs  login_token.rs  mod.rs  schema.rs  state.rs  subscription.rs  users.rs
server/src/domain/: auth_state.rs  login_token.rs  mod.rs  subscription.rs  users.rs
server/src/http_client/: mod.rs  twitch_client.rs
server/src/middlewares/: auto_twitch_login.rs  mod.rs  quick_login.rs
server/src/my_redis/: mod.rs  publisher.rs  token_cache.rs
server/src/routes/: login.rs  mod.rs  webhook.rs  widget_tests.rs
server/src/twitch_api/: app_token.rs  message_handler.rs  mod.rs  subscribe.rs
server/src/util/: common.rs  context.rs  hype_train_test.rs  message_manager.rs  mod.rs  prediction_test.rs  session_state.rs
server/src/websockets/: hype_train.rs  mod.rs  predictions.rs
src/: lib.rs  util.rs
src/common_data/: eventsub_msgs.rs  mod.rs
src/front_common/: action_list.rs  animated_values.rs  common_params.rs  mod.rs  options_util.rs  scalable_wrapper.rs  source_options.rs  transition_funcs.rs
src/front_common/components/: countdown_timer.rs  mod.rs
src/front_common/hypetrain/: mod.rs  options.rs  state.rs
src/front_common/hypetrain/components/: mod.rs  normal.rs
src/front_common/predictions/: mod.rs  options.rs  state.rs
src/front_common/predictions/components/: list.rs  mod.rs
twitch-sources-client/: Cargo.toml  README.md
twitch-sources-client/.openapi-generator/: FILES
twitch-sources-client/docs/: DefaultApi.md  LoginTokenResponse.md  LoginUrlRequest.md  LoginUrlResponse.md  UserInfo.md
twitch-sources-client/src/apis/: default_api.rs
twitch-sources-client/src/models/: login_token_response.rs  login_url_request.rs  login_url_response.rs  mod.rs  user_info.rs
