[package]
name = "twitch-sources-rework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
gloo-timers = "0.2.4"
yew = "0.19"
yew-hooks = "0.1.56"
web-sys = { version = "0.3.60", features = ["HtmlElement"] }
wasm-bindgen = "0.2.83"
chrono = { version = "0.4", features = ["wasmbind"] }
yew-style-in-rs = "0.4.1"

[workspace]
members = ["server", "app", "predictions-pie"]
default-members = ["server"]