[package]
name = "twitch-sources-rework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = "0.2.4"
gloo-render = "0.2"
yew = "0.19"
yew-hooks = "0.1.56"
web-sys = { version = "0.3.60", features = ["HtmlElement"] }
wasm-bindgen = "0.2.83"
chrono = { version = "0.4", features = ["wasmbind"] }
yew-style-in-rs = "0.4.1"
strum = { version = "0.24.1", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.44"
uuid = { version = "1.5.0", features = ["v4", "js"] }

[workspace]
members = ["server", "app", "predictions-list", "hypetrain-normal"]
default-members = ["server"]