[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
twitch-sources-rework = {path=".."}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.58"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
wasm-logger = "0.2"