[package]
name = "predictions-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-logger = "0.2"
web-sys = { version = "0.3.59", features = ["Window", "Location"] }
yew-hooks = "0.1.56"
twitch-sources-rework = {path=".."}
serde_json = "1.0"
serde_urlencoded = "0.7"