[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
twitch-sources-rework = {path=".."}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.0"
actix-session = { version = "0.7", features = ["redis-rs-session", "redis-rs-tls-session"] }
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
diesel-async = { version = "0.1", features = ["postgres", "deadpool"]}
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.22", features = ["aio"] }
deadpool-redis = "0.11.0"
chrono = { version = "0.4", features = ["serde"] }
paperclip = { version = "0.7", features = ["actix4", "v3", "actix-session", "actix-files"] }
base64 = "0.13"
rand = "0.8"
actix-web-actors = "4.1"
actix = "0.13"
futures = "0.3"
futures-util = "0.3.25"
serde_urlencoded = "0.7"
hex = "0.4"
tokio = "1.20.1"
dashmap = "5.4.0"